--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.wav filter=lfs diff=lfs merge=lfs -text
 Code/dist/MachineLearningIEM filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.pkg filter=lfs diff=lfs merge=lfs -text
